Fix critical multipart bugs, harden servlet lifecycle, and modernize codebase
- Fix multipart parser: reset CharsetDecoder between parts, loop on
  partial skip/read, catch BufferOverflowException, use US-ASCII for
  protocol bytes, and add descriptive error messages
- Fix boundary extraction to handle quoted values and parameter ordering
- Fix Servlet.init() to pass ServletConfig to super, guard null resolve()
- Replace opaque NPEs in Env with IllegalStateException
- Replace deprecated Class.newInstance() with reflective constructor call
- Add @Override annotations, return unmodifiable map from getParameterMap()
- Defensive copy in ParsedEntry.getParts(), better ListResolver errors
- Extract AbstractRoutes base class with lazy double-checked locking init
- Add CRLF injection validation on redirect/location behaviors
- Add 44 tests (5 -> 49), fix ServletTest to use real AppRoutes class
- Upgrade deps: Servlet 3.1, JUnit 4.13.2, Mockito 5.14.2, Jetty 9.4.58
- Replace Travis CI with GitHub Actions (Java 11, 17 matrix)
- Add build/ and .gradle/ to .gitignore